[package]
name = "exercise-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libafl = { path = "../../../Repositories/LibAFL/libafl" }
libafl_cc = { path = "../../../Repositories/LibAFL/libafl_cc" }
libafl_targets = { path = "../../../Repositories/LibAFL/libafl_targets" , features = ["libfuzzer", "sancov_pcguard_hitcounts"] }
clap = "3.0.0-beta.5"

[lib]
name = "exercisetwo"
crate-type = ["staticlib"]
