[package]
name = "exercise-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
libafl = { path = "../../../Repositories/LibAFL/libafl" }
libafl_sugar = { path = "../../../Repositories/LibAFL/libafl_sugar" }
libafl_targets = { path = "../../../Repositories/LibAFL/libafl_targets", features = "ForkserverBytesCoverageSugar" }
